--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/DeliveryPages/DeliveryDetails.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/DeliveryPages/DeliveryDetails.cshtml
@@ -84,7 +84,7 @@
                                     </div>
                                     <div class="flex flex-col">
                                         <dt class="text-sm font-medium text-gray-500">Total Price</dt>
-                                        <dd class="mt-1 text-lg font-semibold text-green-600">@delivery.Order.TotalPrice.ToString("C")</dd>
+                                        <dd class="mt-1 text-lg font-semibold text-green-600">@delivery.Order.TotalPrice.ToString("C", new System.Globalization.CultureInfo("vi-VN"))</dd>
                                     </div>
                                     <div class="flex flex-col">
                                         <dt class="text-sm font-medium text-gray-500">Order Date</dt>
