--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/DeliveryPages/DeliveryIndex.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/DeliveryPages/DeliveryIndex.cshtml
@@ -47,7 +47,7 @@
                                     </div>
                                     <div>
                                         <div class="text-sm font-medium text-gray-500">Total Price</div>
-                                        <div class="text-lg font-semibold text-blue-600">$@delivery.TotalPrice.ToString("N2")</div>
+                                        <div class="text-lg font-semibold text-blue-600">@delivery.TotalPrice.ToString("C", new System.Globalization.CultureInfo("vi-VN"))</div>
                                     </div>
                                     <div>
                                         <div class="text-sm font-medium text-gray-500">Order Date</div>
