--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/FlowerPages/EditFlower.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/FlowerPages/EditFlower.cshtml
@@ -74,7 +74,6 @@
                 </select>
             </div>
 
-
             <div class="mb-4">
                 <label for="Color" class="block text-gray-700 font-bold mb-2">Color:</label>
                 <select class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50"
@@ -104,7 +103,7 @@
 
             <div class="mb-4">
                 <label class="block text-gray-700 font-bold mb-2">Current Image:</label>
-                <img src="@Model.Flower.Image" alt="@Model.Flower.Image" class="w-32 h-32 object-cover border rounded mb-2" />
+                <img src="@Model.Flower.Image" alt="@Model.Flower.Image" class="w-32 h-32 object-cover mb-2" />
             </div>
 
             <div class="mb-4">
