--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/OrderPages/OrderIndex.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/OrderPages/OrderIndex.cshtml
@@ -45,7 +45,7 @@
                                                     {
                                                         <tr>
                                                             <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">@order.OrderDate</td>
-                                                            <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">@order.TotalPrice.ToString("C")</td>
+                                                            <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">@order.TotalPrice.ToString("C0", new System.Globalization.CultureInfo("vi-VN"))</td>
                                                             <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">@order.DeliveryAddress</td>
                                                             <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">@order.DeliveryDate</td>
                                                             <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">@order.OrderStatus</td>
