--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/OrderPages/OrderUser.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/OrderPages/OrderUser.cshtml
@@ -53,7 +53,7 @@
                 {
                     <tr class="hover:bg-indigo-50 transition ease-in-out duration-150">
                         <td class="px-6 py-4 text-sm font-medium text-gray-900">@DateTime.Parse(order.OrderDate).ToString("dd-MM-yyyy")</td>
-                        <td class="px-6 py-4 text-sm font-medium text-gray-900">@order.TotalPrice.ToString("C")</td>
+                        <td class="px-6 py-4 text-sm font-medium text-gray-900">@order.TotalPrice.ToString("C0", new System.Globalization.CultureInfo("vi-VN"))</td>
                         <td class="px-6 py-4 text-sm font-medium text-gray-900">@order.TotalQuantity</td>
                         <td class="px-6 py-4 text-sm font-medium text-gray-900">@DateTime.Parse(order.DeliveryDate).ToString("dd-MM-yyyy")</td>
                         <td class="px-6 py-4 text-sm font-medium">
