--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Login/Register.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Login/Register.cshtml
@@ -61,7 +61,7 @@
                     <select asp-for="RegisterRequest.Role" class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none" required>
                         <option value="">Select Role</option>
                         <option value="Buyer">Buyer</option>
-                        <option value="Personal">Personal</option>
+                        <option value="Personal">Delivery</option>
                     </select>
                     <span asp-validation-for="RegisterRequest.Role" class="text-red-500"></span>
                 </div>
